[package]
name = "pgutils"
version = "0.1.0"
edition = "2021"

[features]
with-uuid-1 = ["tokio-postgres/with-uuid-1"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]

[dependencies]
tokio-postgres = "0.7"
pgutils-migrate = { path = "internal/migrate" }
pgutils-macros = { path = "internal/macros" }